# Tally-DB-Loader

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
src-tauri/: .env  .gitignore  Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/config/: cli.rs  definition.rs  json_config.rs  logger.rs  mod.rs  utility.rs  yaml_config.rs
src-tauri/src/server/: app_state.rs  database.rs  mod.rs  tally.rs  tally_xml.rs
src-tauri/src/tally_request/: company.xml
