[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2.2.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0" }
tauri-plugin-log = "2.0.0-rc"
serde_yaml = "0.9.34"
fern = "0.6"
chrono = "0.4"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
mysql_async = "0.36.0"
lazy_static = "1.4"
derive_more = { version = "2.0.1", features = ["deref_mut"] }
reqwest = "0.12.15"
